# advent_of_code_2024

./: .gitignore  Cargo.toml  TEMPLATE_AOC_SOLUTION.rs  objdump_y_both_v0.txt  objdump_y_both_v1.txt  x.py  x.rs  y.rs
examples/: x.rs
problems/: Day 1 - Advent of Code 2024.webarchive  Day 10 - Advent of Code 2024.webarchive  Day 11 - Advent of Code 2024.webarchive  Day 12 - Advent of Code 2024.webarchive  Day 13 - Advent of Code 2024.webarchive  Day 14 - Advent of Code 2024.webarchive  Day 15 - Advent of Code 2024.webarchive  Day 16 - Advent of Code 2024.webarchive  Day 17 - Advent of Code 2024.webarchive  Day 18 - Advent of Code 2024.webarchive  Day 19 - Advent of Code 2024.webarchive  Day 2 - Advent of Code 2024.webarchive  Day 20 - Advent of Code 2024.webarchive  Day 21 - Advent of Code 2024.webarchive  Day 22 - Advent of Code 2024.webarchive  Day 23 - Advent of Code 2024.webarchive  Day 24 - Advent of Code 2024.webarchive  Day 25 - Advent of Code 2024.webarchive  Day 3 - Advent of Code 2024.webarchive  Day 4 - Advent of Code 2024.webarchive  Day 5 - Advent of Code 2024.webarchive  Day 6 - Advent of Code 2024.webarchive  Day 7 - Advent of Code 2024.webarchive  Day 8 - Advent of Code 2024.webarchive  Day 9 - Advent of Code 2024.webarchive
python/: pyproject.toml
src/: aoc_1.rs  aoc_10.rs  aoc_11.rs  aoc_12.rs  aoc_13.rs  aoc_14.rs  aoc_15.rs  aoc_16.rs  aoc_17.rs  aoc_18.rs  aoc_19.rs  aoc_2.rs  aoc_3.rs  aoc_4.rs  aoc_5.rs  aoc_6.rs  aoc_7.rs  aoc_8.rs  aoc_9.rs  diag.rs  fun_list.rs  geometry.rs  graph.rs  graph_algo.rs  io_help.rs  main.rs  matrix.rs  nums.rs  (+4 more)
