[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
regex = "1.11.1"
ndarray = { version = "0.16.1", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
