[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Malcolm Greaves", email = "greaves.malcolm@gmail.com" }
]
dependencies = [
  'numpy',
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "ipython",
  "ipdb",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
